Correct loss of h1 when horizontal on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -355,3 +355,12 @@ header {
     margin: 0 20px;
   }
 }
+
+@media screen and (max-height: 450px) {
+  .register-container {
+    align-items: flex-start;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+  }
+}
